--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [dependencies]
+libc = "0.2.171"
+paste = "1.0.15"
 slang-sys = { path = "slang-sys" }
+thiserror = "2.0.12"
 
 [workspace]
 members = [
