--- a/slang-sys/Cargo.toml
+++ b/slang-sys/Cargo.toml
@@ -7,6 +7,11 @@ publish = false
 
 [dependencies]
 paste = "1.0.15"
+serde = { version = "1", features = ["derive"], optional = true}
 
 [build-dependencies]
 bindgen = "0.71.1"
+
+[features]
+serde = ["dep:serde"]
+
